# tumorclass.info

./: .flake8  .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
api/: app.py  main.py  main_old.py  old_main.py  old_old_main.py  t.py  tt.py
api/static/: app.html
api/templates/: base.html  index.html
app/: main.py  requirements.txt
app/modules/: model.py
data/original_rembrandt/: preprocessing.ipynb
models/: cnn_alexnet_checkpoint.hdf5  cnn_alexnet_model.h5  cnn_alexnet_model_history.pickle  cnn_custom_checkpoint.hdf5  cnn_custom_model.h5  cnn_custom_model_history.pickle  cnn_custom_model_summary.gv  cnn_custom_model_summary.txt  cnn_densenet121_checkpoint.hdf5  cnn_densenet121_model.h5  cnn_densenet121_model_history.pickle  cnn_mobilenet_checkpoint.hdf5  cnn_mobilenet_model.h5  cnn_mobilenet_model_history.pickle  cnn_vgg16_checkpoint.hdf5  cnn_vgg16_model.h5  cnn_vgg16_model_history.pickle
notebooks/: alexnet.ipynb  augmentation.ipynb  custom_cnn.ipynb  densenet121.ipynb  explainable_ai.ipynb  mobilenet.ipynb  old_explainable_ai.ipynb  preprocessing.ipynb  resnext.ipynb  tsetlin.ipynb  vgg16.ipynb
notebooks/tools/: data.py  file.py  fix_pycm_sort.py  project.py  visualize.py
static/html/: literature-review.html
static/images/favicon/: icon256x256.icns
templates/: about.html  base.html  conference-paper.html  data.html  footer.html  home.html  index.html  navbar.html
